# stocksh

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: iex_cloud.rs  main.rs  utils.rs
src/formatter/: spec.pest
