[package]
name = "stocksh"
version = "0.1.0"
authors = ["Matouš Dzivjak <matousdzivjak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.6" }
json = "0.12.4"
serde = "1.0.126"
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["json", "rustls-tls"] }
termion = "1.5.6"
moka = { version = "0.3.1", features = ["future"] }
dotenv = "0.15.0"
log = "0.4.6"
env_logger = "0.6.1"
futures = "0.3.15"
validator = { version = "0.13.0", features = ["derive"]}

